fix button height on iOs

--- a/src/fisarmonica.css
+++ b/src/fisarmonica.css
@@ -74,6 +74,7 @@
     justify-content: space-between;
     align-items: flex-start;
     width: 100%;
+    height: 100%;
 }
 
 .fisarmonica-button > * {
